k8s/air-quality.yaml
apiVersion: v1
kind: Service
metadata:
  name: air-quality-service
  labels:
    app: air-quality
    role: api
    tier: backend
spec:
  type: LoadBalancer
  selector:
    app: air-quality
    role: api
    tier: backend
  ports:
  - port: 3200
    targetPort: 3200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: air-quality-service
  labels:
    app: air-quality
    role: api
    tier: backend
spec:
  selector:
    matchLabels:
      app: air-quality
      role: api
      tier: backend
  template:
    metadata:
      labels:
        app: air-quality
        role: api
        tier: backend
    spec:
      containers:
      - name: air-quality-service
        image: air-quality-service
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3200
