k8s/geocoding.yaml
apiVersion: v1
kind: Service
metadata:
  name: geocoding-service
spec:
  type: LoadBalancer
  selector:
    app: geocoding-service
  ports:
  - port: 3100
    targetPort: 3100

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geocoding-service
spec:
  selector:
    matchLabels:
      app: geocoding-service
  template:
    metadata:
      labels:
        app: geocoding-service
    spec:
      containers:
      - name: geocoding-service
        image: geocoding-service
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3100
