k8s/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb-service
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-service
spec:
  selector:
    matchLabels:
      app: mongodb-service
  template:
    metadata:
      labels:
        app: mongodb-service
    spec:
      containers:
        - name: mongodb-service
          image: mongo:3.6.17-xenial
          ports:
            - containerPort: 27017
