k8s/website.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    app: website
    tier: frontend
spec:
  selector:
    app: website
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
    tier: frontend
spec:
  selector:
    matchLabels:
      app: website
      tier: frontend
  template:
    metadata:
      labels:
        app: website
        tier: frontend
    spec:
      containers:
      - name: website
        image: website
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
