k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: learn-k8.box
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: website
                port:
                  number: 80
